@@ -1,6 +1,8 @@
 2013-08-13  Albert Chu <chu11@llnl.gov>
 
 	* man/bmc-config.conf.5.pre.in: Fix section typos.
+
+	* man/freeipmi.conf.5.pre.in: Add missing tool. 
 	
 2013-08-09  Albert Chu <chu11@llnl.gov>
 
